# QT_Module36

./: CMakeLists.txt
include/: mainWindow.h
src/: main.cpp  mainWindow.cpp
